# Gorbagana

./: .gitignore  Anchor.toml  COMPETITION_SUBMISSION.md  CROSS_DEVICE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_TRIGGER.md  FINAL_COMMIT_SUMMARY.md  FINAL_INSTRUCTIONS.md  FINAL_SUBMISSION_SUMMARY.md  FORCE_CACHE_CLEAR.md  FORCE_DEPLOY_TRIGGER.md  FORCE_DEPLOY_WEBSOCKET_FIX.md  INNOVATION.md  JUDGE_EVALUATION_GUIDE.md  MONGODB_SETUP.md  NETWORK_CONFIGURATION.md  NUCLEAR_CACHE_CLEAR_v5.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_RELEASE.md  PROJECT_COMPLETE.md  README.md  RENDER_DEPLOY_TRIGGER.md  SUBMISSION.md  VERCEL_DEPLOYMENT.md  cleanup-production.js  deploy-backend.js  deploy-frontend.js  deploy.js  deployment.json  gorbagana-transaction-test.js  netlify.toml  package-lock.json  package.json
backend/: .gitignore  database.js  db.js  env.example  example.env  package.json  render.yaml  server.js  temp.env
backend/data/: .gitkeep
frontend/: README.md  netlify.toml  next.config.js  package-lock.json  package.json  postcss.config.mjs
frontend/public/: cache-test.html
frontend/src/app/: globals.css  layout.tsx  page.tsx  simple-game.tsx
frontend/src/components/: ClientOnly.tsx  WalletProvider.tsx
frontend/src/lib/: gameStorage.ts
programs/trash-tac-toe/: Cargo.toml
programs/trash-tac-toe/src/: lib.rs
tests/: trash-tac-toe.ts
~/.config/solana/: id.json
